working on the Assignment again

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button id="webcamButton">STARTWEBCAM</button>
       <button id="logButton">LOG DATA</button>
 
-      <button id="trainModelBtn">TRAINMODEL</button>
+      <!-- <button id="trainModelBtn">TRAINMODEL</button> -->
       <button id="predictBtn">PREDICTBTN</button>
 
       <div class="videoView">
