--- a/training-data/index.html
+++ b/training-data/index.html
@@ -6,7 +6,7 @@
     <title>MediaPipe Handpose</title>
     <link rel="stylesheet" href="./style.css" />
     <script defer type="module" src="./src/main.js"></script>
-    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+    <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
   </head>
 
   <body>
